--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,50 @@
-name: pr_check
+name: Test CI
 
 on:
   workflow_dispatch:
   push:
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: install toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: wasm32-unknown-unknown
-        override: true
-        profile: minimal
-    - name: Install trunk
-      uses: jetli/trunk-action@v0.1.0
-      with:
-        version: 'latest'
-    - name: Build
-      run: trunk build
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v2
+
+      - name: install toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+          profile: minimal
+
+      - name: Install Nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+
+      - name: Install trunk
+        uses: jetli/trunk-action@v0.1.0
+        with:
+          version: "latest"
+
+      - name: Install PNPM
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Compile css files
+        run: pnpm run css
+
+      - name: Build
+        run: trunk build
+
+      - name: Run tests
+        run: cargo test --verbose
